--- a/RobinAnderson.FileSync.Core/RobinAnderson.FileSync.Core.csproj
+++ b/RobinAnderson.FileSync.Core/RobinAnderson.FileSync.Core.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HashProvider.cs" />
+    <Compile Include="IFileSetComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
